Update InitialHandler.java
Improved the code for better performance, reduced memory usage, and optimized networking efficiency.